--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;700&family=Sarabun&family=Sulphur+Point&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans&family=Encode+Sans+SC:wght@500;600;700;800&family=Jost:ital,wght@0,200;0,300;1,200&family=Libre+Baskerville:wght@700&family=Love+Ya+Like+A+Sister&family=Mystery+Quest&family=Open+Sans:wght@600;700;800&display=swap" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&display=swap" rel="stylesheet"> -->
     <title>JEMAJE</title>
   </head>
   <body>
