--- a/client/index.html
+++ b/client/index.html
@@ -5,7 +5,15 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CHATROPOLIS</title>
-    <link href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;700&family=Sarabun&family=Sulphur+Point&display=swap" rel="stylesheet">
+    <!-- GOOGLE FONTS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat:wght@400;700&family=Sarabun&family=Sulphur+Point&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="root"></div>
